Added ES and EN youtube videos

--- a/es/index.html
+++ b/es/index.html
@@ -196,6 +196,16 @@
     </div>
   </div>
   <hr class="divider">
+  <div id="video-resultat" class="section wf-section">
+    <div class="container w-container">
+      <h2 class="heading-8"><strong>Vídeo sobre la fase 1</strong></h2>
+      <div class="section-subtitle">Este vídeo explica los procedimientos, agradecimientos y resultados obtenidos en la fase 1 del estudio.</div>
+      <div class="youtube-video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Hg19icnKvf8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <hr class="divider">
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
       <h2 class="heading-8"><strong class="bold-text-6">Únete a la prueba piloto</strong></h2>
