--- a/en/index.html
+++ b/en/index.html
@@ -196,6 +196,16 @@
     </div>
   </div>
   <hr class="divider">
+  <div id="video-resultat" class="section wf-section">
+    <div class="container w-container">
+      <h2 class="heading-8"><strong>Video about phase 1</strong></h2>
+      <div class="section-subtitle">This video explains the procedures, acknowledgments and results obtained in phase 1 of the study.</div>
+      <div class="youtube-video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/at7rBDnewA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <hr class="divider">
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
       <h2 class="heading-8"><strong class="bold-text-6">Join the testing stage</strong></h2>
