--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <h2 class="heading-8"><strong>Vídeo sobre la fase 1</strong></h2>
       <div class="section-subtitle">Aquest vídeo explica els procediments, agraïments i resultats obtinguts en la fase 1 de l'estudi.</div>
       <div class="youtube-video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eztj7B0snQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eztj7B0snQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </div>
