Added new press publication

--- a/es/index.html
+++ b/es/index.html
@@ -163,6 +163,9 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals (Prensa)</a>
         </li> 
         <li>
+          <a href="https://www.ccma.cat/catradio/catalunya-al-dia/el-soroll-dels-trens-altera-el-ritme-cardiac-dels-veins-del-serrallo-de-tarragona/noticia/3226311/" target="_blank">Corporació Catalana de Mitjans Audiovisuals (Prensa)</a>
+        </li> 
+        <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia (Prensa)</a>
         </li> 
         <li>
