Added a new link from Diari de Tarragona

--- a/en/index.html
+++ b/en/index.html
@@ -169,6 +169,9 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia (Press)</a>
         </li> 
         <li>
+          <a href="https://www.diaridetarragona.com/tarragona/mediran-como-afecta-el-ruido-al-sueno-y-el-ritmo-cardiaco-de-los-vecinos-de-el-serrallo-de-tarragona-EG16102699" target="_blank">Diari de Tarragona (Press)</a>
+        </li>
+        <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona (Press)</a>
         </li>
         <li>
