--- a/es/index.html
+++ b/es/index.html
@@ -143,6 +143,9 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12 (TV)</a>
         </li> 
         <li>
+          <a href="https://www.tac12.tv/tarragona/arxiu-tarragona/item/34064-el-tren-que-no-deixa-dormir-el-serrallo" target="_blank">TAC 12 (TV)</a>
+        </li>
+        <li>
           <a href="https://www.ccma.cat/tv3/alacarta/telenoticies-comarques/el-soroll-dels-trens-al-barri-del-serrallo-provoca-alteracions-cardiaques-als-veins/video/6211031/" target="_blank">TV3 (TV)</a>
         </li> 
 
@@ -158,7 +161,31 @@
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio (Radio)</a>
         </li> 
+        <li>
+          <a href="https://www.tarragonaradio.cat/identifiquen-el-tren-que-destorba-la-son-dels-veins-del-serrallo/" target="_blank">Tarragona Ràdio (Radio)</a>
+        </li> 
+        <li>
+          <a href="https://rctgn.cat/peces-informatives/el-port-sollicita-a-adif-canvis-per-acabar-amb-els-trens-que-generen-exces-de-soroll-al-serrallo/" target="_blank">Ràdio ciutat de Tarragona (Radio)</a>
+        </li> 
 
+        <li>
+          <a href="https://www.diarimes.com/ca/tarragona/240524/identifiquen-tren-mercaderies-destorba-son-dels-veins-serrallo_145145.html" target="_blank">Diari Més (Prensa)</a>
+        </li> 
+        <li>
+          <a href="https://www.diarimes.com/ca/tarragona/240528/exigeixen-l-ajuntament-pressioni-port-i-adif-per-reduir-els-sorolls-dels-trens-serrallo_145324.html" target="_blank">Diari Més (Prensa)</a>
+        </li> 
+        <li>
+          <a href="https://www.diaridetarragona.com/tarragona/tren-despertador-tarragona-serrallo-MJ19671085" target="_blank">Diari de Tarragona (Prensa)</a>
+        </li> 
+        <li>
+          <a href="https://diaridigital.urv.cat/identifiquen-el-tren-que-destorba-la-son-dels-veins-del-serrallo/" target="_blank">Diari Digital URV (Prensa)</a>
+        </li> 
+        <li>
+          <a href="https://elpais.com/espana/catalunya/2024-05-24/identificado-el-tren-que-estorba-el-sueno-de-los-vecinos-del-barrio-de-serrallo-en-tarragona.html" target="_blank">El País (Prensa)</a>
+        </li> 
+        <li>
+          <a href="https://www.elpuntavui.cat/societat/article/5-societat/2421411-pressio-contra-el-tren-carboner-que-desperta-de-matinada-els-veins-del-serrallo.html" target="_blank">El Punt Avui (Prensa)</a>
+        </li>
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals (Prensa)</a>
         </li> 
