--- a/index.html
+++ b/index.html
@@ -140,90 +140,99 @@
       <div class="section-subtitle">Aquest és un recull de tots els llocs on ha sigut publicat Soundless.</div>
       <ul class="two-column-bullet"> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12 (TV)</a>
-        </li> 
-        <li>
-          <a href="https://www.tac12.tv/tarragona/arxiu-tarragona/item/34064-el-tren-que-no-deixa-dormir-el-serrallo" target="_blank">TAC 12 (TV)</a>
+          <a href="https://www.tac12.tv/tarragona/arxiu-tarragona/item/34064-el-tren-que-no-deixa-dormir-el-serrallo" target="_blank">TAC 12 - TV (2024)</a>
         </li>
         <li>
-          <a href="https://www.ccma.cat/tv3/alacarta/telenoticies-comarques/el-soroll-dels-trens-al-barri-del-serrallo-provoca-alteracions-cardiaques-als-veins/video/6211031/" target="_blank">TV3 (TV)</a>
+          <a href="https://www.tac12.tv/tarragona/arxiu-tarragona/item/34164-canvi-de-maniobres-i-locomotores-mes-modernes-per-reduir-els-sorolls-al-serrallo" target="_blank">TAC 12 - TV (2024)</a>
+        </li>
+        <li>
+          <a href="https://www.ccma.cat/324/un-tren-nocturn-de-mercaderies-altera-el-ritme-cardiac-als-veins-del-serrallo/noticia/3295400/" target="_blank">TV3 - TV (2024)</a>
         </li> 
 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?3102-01-HcJWw759FAlZhmanJXGFJog-423-11035-0-31204403-1134" target="_blank">Onda Cero Tarragona (Ràdio)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12 - TV (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HEMzTcP5LR1eXq4xlE7Qg9w-423-52778-0-31173851-1134" target="_blank">Tarragona Ràdio (Ràdio)</a>
-        </li> 
-        <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio (Ràdio)</a>
-        </li> 
-        <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio (Ràdio)</a>
-        </li> 
-        <li>
-          <a href="https://www.tarragonaradio.cat/identifiquen-el-tren-que-destorba-la-son-dels-veins-del-serrallo/" target="_blank">Tarragona Ràdio (Ràdio)</a>
-        </li> 
-        <li>
-          <a href="https://rctgn.cat/peces-informatives/el-port-sollicita-a-adif-canvis-per-acabar-amb-els-trens-que-generen-exces-de-soroll-al-serrallo/" target="_blank">Ràdio ciutat de Tarragona (Ràdio)</a>
+          <a href="https://www.ccma.cat/tv3/alacarta/telenoticies-comarques/el-soroll-dels-trens-al-barri-del-serrallo-provoca-alteracions-cardiaques-als-veins/video/6211031/" target="_blank">TV3 - TV (2023)</a>
         </li> 
 
         <li>
-          <a href="https://www.diarimes.com/ca/tarragona/240524/identifiquen-tren-mercaderies-destorba-son-dels-veins-serrallo_145145.html" target="_blank">Diari Més (Premsa)</a>
+          <a href="https://www.tarragonaradio.cat/identifiquen-el-tren-que-destorba-la-son-dels-veins-del-serrallo/" target="_blank">Tarragona Ràdio - Ràdio (2024)</a>
         </li> 
         <li>
-          <a href="https://www.diarimes.com/ca/tarragona/240528/exigeixen-l-ajuntament-pressioni-port-i-adif-per-reduir-els-sorolls-dels-trens-serrallo_145324.html" target="_blank">Diari Més (Premsa)</a>
+          <a href="https://rctgn.cat/peces-informatives/el-port-sollicita-a-adif-canvis-per-acabar-amb-els-trens-que-generen-exces-de-soroll-al-serrallo/" target="_blank">Ràdio ciutat de Tarragona - Ràdio (2024)</a>
+        </li> 
+
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?3102-01-HcJWw759FAlZhmanJXGFJog-423-11035-0-31204403-1134" target="_blank">Onda Cero Tarragona - Ràdio (2023)</a>
         </li> 
         <li>
-          <a href="https://www.diaridetarragona.com/tarragona/tren-despertador-tarragona-serrallo-MJ19671085" target="_blank">Diari de Tarragona (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HEMzTcP5LR1eXq4xlE7Qg9w-423-52778-0-31173851-1134" target="_blank">Tarragona Ràdio - Ràdio (2023)</a>
         </li> 
         <li>
-          <a href="https://diaridigital.urv.cat/identifiquen-el-tren-que-destorba-la-son-dels-veins-del-serrallo/" target="_blank">Diari Digital URV (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio - Ràdio (2023)</a>
         </li> 
         <li>
-          <a href="https://elpais.com/espana/catalunya/2024-05-24/identificado-el-tren-que-estorba-el-sueno-de-los-vecinos-del-barrio-de-serrallo-en-tarragona.html" target="_blank">El País (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio - Ràdio (2023)</a>
+        </li> 
+        
+        <li>
+          <a href="https://www.diarimes.com/ca/tarragona/240524/identifiquen-tren-mercaderies-destorba-son-dels-veins-serrallo_145145.html" target="_blank">Diari Més - Premsa (2024)</a>
         </li> 
         <li>
-          <a href="https://www.elpuntavui.cat/societat/article/5-societat/2421411-pressio-contra-el-tren-carboner-que-desperta-de-matinada-els-veins-del-serrallo.html" target="_blank">El Punt Avui (Premsa)</a>
+          <a href="https://www.diarimes.com/ca/tarragona/240528/exigeixen-l-ajuntament-pressioni-port-i-adif-per-reduir-els-sorolls-dels-trens-serrallo_145324.html" target="_blank">Diari Més - Premsa (2024)</a>
+        </li> 
+        <li>
+          <a href="https://www.diaridetarragona.com/tarragona/tren-despertador-tarragona-serrallo-MJ19671085" target="_blank">Diari de Tarragona - Premsa (2024)</a>
+        </li> 
+        <li>
+          <a href="https://diaridigital.urv.cat/identifiquen-el-tren-que-destorba-la-son-dels-veins-del-serrallo/" target="_blank">Diari Digital URV - Premsa (2024)</a>
+        </li> 
+        <li>
+          <a href="https://elpais.com/espana/catalunya/2024-05-24/identificado-el-tren-que-estorba-el-sueno-de-los-vecinos-del-barrio-de-serrallo-en-tarragona.html" target="_blank">El País - Premsa (2024)</a>
+        </li> 
+        <li>
+          <a href="https://www.elpuntavui.cat/societat/article/5-societat/2421411-pressio-contra-el-tren-carboner-que-desperta-de-matinada-els-veins-del-serrallo.html" target="_blank">El Punt Avui - Premsa (2024)</a>
+        </li>
+
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals - Premsa (2023)</a>
+        </li> 
+        <li>
+          <a href="https://www.ccma.cat/catradio/catalunya-al-dia/el-soroll-dels-trens-altera-el-ritme-cardiac-dels-veins-del-serrallo-de-tarragona/noticia/3226311/" target="_blank">Corporació Catalana de Mitjans Audiovisuals - Premsa (2023)</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia - Premsa (2023)</a>
+        </li> 
+        <li>
+          <a href="https://www.diaridetarragona.com/tarragona/mediran-como-afecta-el-ruido-al-sueno-y-el-ritmo-cardiaco-de-los-vecinos-de-el-serrallo-de-tarragona-EG16102699" target="_blank">Diari de Tarragona - Premsa (2023)</a>
         </li>
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals (Premsa)</a>
-        </li> 
-        <li>
-          <a href="https://www.ccma.cat/catradio/catalunya-al-dia/el-soroll-dels-trens-altera-el-ritme-cardiac-dels-veins-del-serrallo-de-tarragona/noticia/3226311/" target="_blank">Corporació Catalana de Mitjans Audiovisuals (Premsa)</a>
-        </li> 
-        <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia (Premsa)</a>
-        </li> 
-        <li>
-          <a href="https://www.diaridetarragona.com/tarragona/mediran-como-afecta-el-ruido-al-sueno-y-el-ritmo-cardiaco-de-los-vecinos-de-el-serrallo-de-tarragona-EG16102699" target="_blank">Diari de Tarragona (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona - Premsa (2023)</a>
         </li>
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona (Premsa)</a>
-        </li>
-        <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?465-01-HMBFHtPFcIZukJrazxWnlOA-423-11035-0-31173851-1134" target="_blank">Més Tarragona (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?465-01-HMBFHtPFcIZukJrazxWnlOA-423-11035-0-31173851-1134" target="_blank">Més Tarragona - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?672-01-H2iD3wTqMVZJ2i3RZRWrzNg-423-11035-0-31173851-1134" target="_blank">Tarragona Web Ràdio (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?672-01-H2iD3wTqMVZJ2i3RZRWrzNg-423-11035-0-31173851-1134" target="_blank">Tarragona Web Ràdio - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2754-01-HyrASp1cvQoAI3Z1y4RAEBw-423-11035-0-31173851-1134" target="_blank">Tarragona 21 (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2754-01-HyrASp1cvQoAI3Z1y4RAEBw-423-11035-0-31173851-1134" target="_blank">Tarragona 21 - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?86393-01-HHOQDvDdMEXqE38bZufBSAA-423-11035-0-31173851-1134" target="_blank">Diari Més (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?86393-01-HHOQDvDdMEXqE38bZufBSAA-423-11035-0-31173851-1134" target="_blank">Diari Més - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?1643-01-HPYvF0ueMe4bX6AKSFbtu3w-423-11035-0-31173851-1134" target="_blank">Reus Digital (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1643-01-HPYvF0ueMe4bX6AKSFbtu3w-423-11035-0-31173851-1134" target="_blank">Reus Digital - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Ràdio Ciutat de Tarragona (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Ràdio Ciutat de Tarragona - Premsa (2023)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital (Premsa)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital - Premsa (2023)</a>
         </li> 
       </ul>
     </div>
