Spacing with another way

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12 - TV (2023)</a>
         </li> 
         <li>
-          <a class="bottom-space" href="https://www.ccma.cat/tv3/alacarta/telenoticies-comarques/el-soroll-dels-trens-al-barri-del-serrallo-provoca-alteracions-cardiaques-als-veins/video/6211031/" target="_blank">TV3 - TV (2023)</a>
+          <a href="https://www.ccma.cat/tv3/alacarta/telenoticies-comarques/el-soroll-dels-trens-al-barri-del-serrallo-provoca-alteracions-cardiaques-als-veins/video/6211031/" target="_blank">TV3 - TV (2023)</a>
+        </li> 
+        <li>
         </li> 
 
         <li>
@@ -173,7 +175,9 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio - Ràdio (2023)</a>
         </li> 
         <li>
-          <a class="bottom-space" href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio - Ràdio (2023)</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio - Ràdio (2023)</a>
+        </li> 
+        <li>
         </li> 
         
         <li>
