--- a/en/index.html
+++ b/en/index.html
@@ -26,7 +26,8 @@
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
         <a href="#publicacions" class="nav-link w-nav-link">Press</a>
         <a href="#qui-som" class="nav-link w-nav-link">About us</a>
-        <a href="/soundless_report_es.pdf" class="nav-link w-nav-link">Results (January)</a>
+        <a href="/soundless_report_first_phase_es.pdf" class="nav-link w-nav-link">Report 1rs phase</a>
+        <a href="/soundless_final_report_en.pdf" class="nav-link w-nav-link">Final report</a>
         <div data-hover="false" data-delay="0" class="w-dropdown">
           <div class="dropdown-toggle dropdown-toggle-2 w-dropdown-toggle">
             <div class="text-block-2">Language</div>
