--- a/es/index.html
+++ b/es/index.html
@@ -26,7 +26,8 @@
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
         <a href="#publicacions" class="nav-link w-nav-link">Prensa</a>
         <a href="#qui-som" class="nav-link w-nav-link">Quiénes somos</a>
-        <a href="/soundless_report_es.pdf" class="nav-link w-nav-link">Resultados (Enero)</a>
+        <a href="/soundless_report_first_phase_es.pdf" class="nav-link w-nav-link">Informe 1ª fase</a>
+        <a href="/soundless_final_report_en.pdf" class="nav-link w-nav-link">Informe final</a>
         <div data-hover="false" data-delay="0" class="w-dropdown">
           <div class="dropdown-toggle dropdown-toggle-2 w-dropdown-toggle">
             <div class="text-block-2">Idioma</div>
